--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,19 +5,107 @@
   box-sizing: border-box;
 }
 
-nav a{
-  text-decoration:none;
-  font-family: 'Lekton';
-  font-weight: 400; 
-  color: whitesmoke;
+.titulo{
+  font-family: 'Oswald'; 
 }
 
-nav a:active, nav a:hover{
-  text-shadow: 0px 0px 15px rgba(255,255,255,.6);
+.menu{
+  width: 60px;
+  height: 60px;
+  background-color: white;
+  border-radius: 50%;
+  position: fixed;
+  top: 25px;
+  left: 25px;
+  cursor: pointer;
+  box-shadow: 0 0 0 0 #fff,0 0 0 0 #fff;
+  transition: box-shadow 1s cubic-bezier(.19,1,.22,1)
+}
+
+.menu:hover{
+  box-shadow: 0 0 0 8px #fff,0 0 0 8px #fff;
+}
+
+#menu-hamburguer{
+  display: none;
+}
+
+#menu-hamburguer:checked ~ ul{
+  opacity: 1;
+}
+
+#menu-hamburguer:checked ~ label .menu{
+  border-radius: 0;
+    height: 40vh;    
+    width: 25vw;
+}
+
+#menu-hamburguer:checked ~ label .hamburguer{
+    transform: rotate(45deg);
+}
+
+#menu-hamburguer:checked ~ label .hamburguer::before{
+  top:0;
+  transform: rotate(90deg);
+}
+
+#menu-hamburguer:checked ~ label .hamburguer::after{
+  bottom:0;
+  transform: rotate(90deg);
+}
+
+.hamburguer{
+  display: block;
+  background-color: black;
+  width: 30px;
+  height: 2px;
+  position: relative;
+  top: 29px;
+  left:15px;
+  transition: 0.5s ease-in-out;
+}
+
+.hamburguer::after,
+.hamburguer::before{
+  background-color: black;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute; 
+  transition: 0.5s ease-in-out;
+}
+
+.hamburguer::before{
+  top: -10px;
+}
+
+.hamburguer::after{
+  bottom: -10px;  
+}
+
+.menu-opcoes{
+  position: fixed;
+  top:15vh;
+  left:15vh;
+  
+  list-style: none;
+  opacity: 0;
+  transition: .25s .1s cubic-bezier(0, 1.07, 0, 1.02);
+  
+}
+
+.menu-opcoes a{
+  display: block;
+  margin-bottom: 1rem;
+  color: gray;
+  font-size: 1rem;
+  text-decoration: none;
+  font-family: 'Roboto';  
 }
 
 h1{
-  font-family: 'Lekton';
+  font-family: 'Oswald';
 }
 
 .perfil{
@@ -52,7 +140,9 @@ h1{
 }
 
 .perfil .texto{
-  font-family: 'Lekton';
+  font-family: 'Oswald';
+  letter-spacing: 0.18rem;
+  font-weight: 300;
   font-size: 1.8rem;
   padding: 2.8rem 1rem 5rem 1rem;
 }
@@ -81,8 +171,8 @@ h1{
   text-shadow: 0px 0px 15px rgba(255,255,255,.6);
 }
 
-.titulo{
-  font-family: 'Lekton';
+.sobre .titulo{
+  margin-bottom: 1.5rem;
 }
     
 .sobre,.depoimentos{  
@@ -94,7 +184,7 @@ h1{
 }  
 
 .sobre .texto p{
-  font-family: 'Abel';  
+  font-family: 'Open Sans';  
 }
 
 .cabecalho-1{
@@ -114,39 +204,60 @@ h1{
   align-items: center;
 }
 
+.cabecalho-1 span{
+  font-family: 'Roboto';
+}
+
+strong{
+  color: #85C1E9;
+}
+
 .servicos h3{
-  font-family: 'Lekton';
+  font-family: 'Oswald';
   font-weight: 400 ;
   font-size: 1.5rem;
 }
 
 .servicos h4{  
-  font-family: 'Lekton';
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
   margin-top: 2rem;
 }
 
+.servicos h5{
+  font-style: italic;
+  font-family: 'Open Sans';
+  font-weight: 300 ;
+  font-size: 1rem;
+}
+
 .servicos p{
-  font-family: 'Abel';
+  font-weight: lighter;
+  font-family: 'Roboto';
+  font-weight: 300 ;
+  font-size: 1rem;
 }
 
-.depoimentos span{
-  font-family: 'Lekton';
+.servicos a {
+  color: aquamarine;
 }
 
-.depoimentos p {
-  font-family: 'Abel';
+.servicos a:hover{
+  color: aquamarine;
+}
+
+.servicos a .fa-whatsapp{
+  font-size: 0.85rem;
+}
+
+.servicos a .fa-whatsapp::after{
+  content : '\00a0'
 }
 
 .demais-servicos{  
   margin: 1rem;
   width: inherit;
-}
-
-.demais-servicos .subtitulo{
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .demais-servicos div h3::before{
@@ -165,11 +276,11 @@ body {
 }
 
 .perfil .button{
-  font-family: 'Abel';
-
+  font-family: 'Oswald';
+  letter-spacing: 0.15rem;
   border: whitesmoke solid 1px;
   background-color: rgba(0, 0, 0, 0.2);
-  width: 10rem;
+  width: 15rem;
   height: 3rem;
   color: whitesmoke;
 
@@ -208,6 +319,15 @@ body {
   text-align: center;
 }
 
+.servicos .subtitulo{
+  font-size: 1.2rem;
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .servicos .itens{
   display: flex;
   flex-direction: column;
@@ -227,12 +347,31 @@ body {
 }
 
 
-
 @media screen and (max-width: 600px) {
 
+  #menu-hamburguer:checked ~ label .menu{
+    border-radius: 0;
+    height: 60vh;   
+    width: 20vw;
+  }
+
+  .menu-opcoes{
+    position: fixed;
+    top:28vh;
+    left:15vh;  
+    list-style: none;
+    opacity: 0;
+    transition: .25s .1s cubic-bezier(0, 1.07, 0, 1.02);    
+  }
+  
+
+}
+
+
+@media screen and (max-width: 600px) {
   
   .perfil .texto{
-    font-family: 'Lekton';
+    font-family: 'Oswald';
     font-size: 1.2rem;
     padding: 2.8rem 1rem 5rem 1rem;
   }
@@ -240,6 +379,21 @@ body {
   .perfil .contato a i {
     color: whitesmoke;
     font-size: 2rem;
+  }
+
+  #menu-hamburguer:checked ~ label .menu{
+    border-radius: 0;
+    height: 60vh;   
+    width: 20vw;
+  }
+
+  .menu-opcoes{
+    position: fixed;
+    top:28vh;
+    left:15vh;  
+    list-style: none;
+    opacity: 0;
+    transition: .25s .1s cubic-bezier(0, 1.07, 0, 1.02);    
   }
   
 
@@ -251,9 +405,53 @@ body {
     font-size: 2.8rem;
   }
   
+  #menu-hamburguer:checked ~ label .menu{
+    border-radius: 0;
+    height: 45vh;   
+    width: 25vw;
+  }
+
+  .menu-opcoes{
+    position: fixed;
+    top:20vh;
+    left:20vh;  
+    list-style: none;
+    opacity: 0;
+    transition: .25s .1s cubic-bezier(0, 1.07, 0, 1.02);    
+  }
+
+  
 }
 
 @media screen and (min-width:1024px){
+
+  .menu{
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    border-radius: 50%;
+    position: fixed;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 #fff,0 0 0 0 #fff;
+    transition: all 1s cubic-bezier(.19,1,.22,1)
+  }
+  
+  #menu-hamburguer:checked ~ label .menu{
+    border-radius: 0;
+    height: 35vh;   
+    width: 10vw;
+  }
+  
+  .menu-opcoes{
+    position: fixed;
+    top:15vh;
+    left:7.5vh;  
+    list-style: none;
+    opacity: 0;
+    transition: .25s .1s cubic-bezier(0, 1.07, 0, 1.02);    
+  }
 
   .fundo-typing{
     padding: 2.8rem 1rem 5rem 1rem;
@@ -268,8 +466,9 @@ body {
     border-right: 2px solid rgba(255, 255, 255, 0.75);
     padding: 0;
     margin-bottom: 3rem;
-    font-family: 'Lekton';
-    font-size: 1.8rem;
+    font-family: 'Open Sans';
+    font-weight: 300 lighter;
+    font-size: 1.5rem;
     
     text-align: center;
     white-space: nowrap;
@@ -296,7 +495,7 @@ body {
       width: 0;
     }
     to {
-      width: 66rem;
+      width: 62rem;
     }
   }
   
