--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,9 +3,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .titulo{
@@ -448,6 +445,7 @@ body {
     
     text-align: center;
     white-space: nowrap;
+    overflow: hidden;
   }
   
 
